2002-11-01  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-namazu.el (w3m-namazu): Change prompt.
	(w3m-namazu): Change prompt; Small fix.

	* w3m-bookmark.el: Experimental bookmark editer.
	(w3m-bookmark-read-file): Removed.
	(w3m-bookmark-buffer): New function.
	(w3m-bookmark-sections): Use it.
	(w3m-bookmark-write-file): Use it; Call `basic-save-buffer'.
	(w3m-bookmark-view): View about://bookmark/ instead of
	w3m-bookmark-file directly.
	(w3m-about-bookmark, w3m-bookmark-current-number)
	(w3m-bookmark-kill-entry, w3m-bookmark-kill-entries)
	(w3m-bookmark-undo): New functions.
	(w3m-bookmark-mode, w3m-bookmark-mode-map): New variables.
	(w3m-bookmark-mode-hook): New hook.
	(w3m-bookmark-mode): New minor mode.
	(w3m-bookmark-mode-setter): New function.
	(toplevel): Register it to `w3m-display-functions'.

2002-10-31  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el: Fix comment.

2002-10-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3mhack.el (w3mhack-generate-colon-keywords-file): Protect
	against unexpected data structure.

2002-10-29  Ken'ichi SATO  <ksato@iijmio-mail.jp>

	* shimbun/sb-zdnet.el (shimbun-zdnet-group-alist): Follow the
	change of the web site.
	(shimbun-zdnet-content-end): Ditto.

2002-10-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-w3m-attributes): Remove workaround for servers which
	do not support HEAD operations.

2002-10-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release emacs-w3m-1.3.3 from emacs-w3m-1_3 branch.

2002-10-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (find-charset): Alias to ignore if no-Mule.

2002-10-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-entity-alist): Use `w3m-mule-unicode-p' instead of
	`w3m-use-mule-ucs'.

	* w3m-xmas.el (w3m-mule-unicode-p): New function.

	* w3m-fsf.el (w3m-mule-unicode-p): New function.

	* w3m-om.el (w3m-mule-unicode-p): Set aliase to `ignore'.

	* w3m-e19.el (w3m-mule-unicode-p): Set aliase to `ignore'.
